--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "build": "npm build",
     "strat": "node index.js",
     "dev": "nodemon index.js"
   },
